--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,13 @@
 <div class="sidebar">
-  <div class="container sidebar-sticky">
+  <div class="container">
     <div class="sidebar-about">
-      <h1>
+      <img src="{{ site.baseurl }}public/srisupang.png" alt="Srisupang T." style="width:50%;">
+      
+      <h2>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
-      </h1>
+      </h2>
       <p class="lead">{{ site.description }}</p>
     </div>
 
@@ -26,11 +28,15 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      
+      
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
+
+  <div class="sidebar-citation">
+    <p>This website is built using the <a href="https://github.com/poole/hyde" target="_blank">Hyde template</a> by <a href="https://github.com/mdo" target="_blank">Mark Otto</a>.</p>
+</div>
+
 </div>
