--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container">
     <div class="sidebar-about">
-      <img src="{{ site.baseurl }}public/srisupang.png" alt="Srisupang T." style="width:50%;">
+      <img src="{{ site.baseurl }}/public/srisupang.png" alt="Srisupang T." style="width:50%;">
       
       <h2>
         <a href="{{ site.baseurl }}">
