--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
       <img src="{{ site.baseurl }}/public/srisupang.png" alt="Srisupang T." style="width:50%;">
       
       <h2>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.baseurl }}/">
           {{ site.title }}
         </a>
       </h2>
